@@ -31,7 +31,7 @@
       INTERMediatorLog.suppressDebugMessageOnPage = true
       //INTERMediatorLog.errorMessageByAlert = true
       IMParts_Catalog.jquery_fileupload.isShowPreview = false
-      IMParts_Catalog.jquery_fileupload.multiFileInPostOnly =true
+      IMParts_Catalog.jquery_fileupload.multiFileInPostOnly = true
     </script>
     <style>
         .jquery-fileupload-container {
